--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swapibox",
+  "name": "swapi-box",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,11 +12,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "./node_modules/eslint/bin/eslint.js ./src/*.js",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --env=jsdom"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "jest-enzyme": "^4.1.1",
+    "prop-types": "^15.6.0",
     "react-addons-test-utils": "^15.6.2"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
